ubiquity (2.1.12) UNRELEASED; urgency=low

  [ Colin Watson ]
  * Add osextras.unlink_force, equivalent to 'rm -f', to save on tedious
    exception handling.

  [ Evan Dandrea ]
  * Allow the user to set a hostname in oem-config.

 -- Colin Watson <cjwatson@ubuntu.com>  Sat, 16 Jan 2010 01:27:31 +0000

ubiquity (2.1.11) lucid; urgency=low

  [ Evan Dandrea ]
  * Remove ubiquity on successful completion of oem-config (LP: #210779).

  [ Didier Roche ]
  * Rebuild needed to take 1.28ubuntu2 user-setup-apply version (LP: #507121)

  [ Colin Watson ]
  * Log calls to partman's freeze_choices and thaw_choices.
  * Revert frozen choices change from 2.1.8.  Instead, arrange to thaw
    choices for partman/choose_partition immediately *before* going back to
    it at the end of building the cache, rather than just after it's
    displayed when thawing choices has no immediate effect (LP: #506585).
  * Automatic update of included source packages: partman-base 135ubuntu4,
    user-setup 1.28ubuntu2.

 -- Colin Watson <cjwatson@ubuntu.com>  Sat, 16 Jan 2010 00:31:16 +0000

ubiquity (2.1.10) lucid; urgency=low

  [ Colin Watson ]
  * Handle transitioning away from plymouth in ubiquity-dm.

  [ Evan Dandrea ]
  * Use new URL format introduced by the latest ubiquity-slideshow.
  * Support RTL text in the Kubuntu slideshow.
  * Bring the KDE frontend slideshow handling into line with GTK
    frontend.

 -- Evan Dandrea <evand@ubuntu.com>  Tue, 12 Jan 2010 12:35:53 +0000

ubiquity (2.1.9) lucid; urgency=low

  * Generate an apparmor cache to speed up boot time.
  * Handle SUDO_USER not being set in copy_network_config.

 -- Evan Dandrea <evand@ubuntu.com>  Mon, 11 Jan 2010 17:15:07 +0000

ubiquity (2.1.8) lucid; urgency=low

  [ Evan Dandrea ]
  * On the timezone page, replace the GTK Comboboxes with ComboboxEntrys and
    add support for typeahead by country/region and city.

  [ Colin Watson ]
  * Cope with frozen choices when preseeding partman to select a particular