@@ -7,11 +7,19 @@
     <property name="border_width">16</property>
     <property name="orientation">vertical</property>
     <child>
-      <object class="GtkLabel" id="intro_label">
+      <object class="GtkAlignment" id="alignment1">
         <property name="visible">True</property>
-        <property name="use_markup">True</property>
-        <property name="wrap">True</property>
-        <property name="selectable">True</property>
+        <property name="xscale">0.25</property>
+        <property name="yscale">1</property>
+        <child>
+          <object class="GtkLabel" id="intro_label">
+            <property name="visible">True</property>
+            <property name="xalign">0</property>
+            <property name="use_markup">True</property>
+            <property name="wrap">True</property>
+            <property name="selectable">True</property>
+          </object>
+        </child>
       </object>
       <packing>
         <property name="position">0</property>
